force-app/main/default/objects/AccountingEntry__c/AccountingEntry__c.object-meta.xml
<CustomObject>
    <label>Écriture comptable</label>
    <nameField>
        <displayFormat>ECC/{YYYY}/{0000000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Écritures comptables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>