force-app/main/default/objects/AccountingEntry__c/fields/accountingPieceCount__c.field-meta.xml
<CustomField>
    <fullName>accountingPieceCount__c</fullName>
    <label>[#] Nombre de pièces comptables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>