force-app/main/default/objects/AccountingEntry__c/fields/AccPieceTemporaryId__c.field-meta.xml
<CustomField>
    <fullName>AccPieceTemporaryId__c</fullName>
    <label>[#] Id temp de la pièce comptable</label>
    <length>20</length>
    <type>Text</type>
</CustomField>