force-app/main/default/objects/AccountingEntry__c/fields/afterSalesServiceAmount__c.field-meta.xml
<CustomField>
    <fullName>afterSalesServiceAmount__c</fullName>
    <description>Montant affecté aux dossiers SAV payants</description>
    <label>Montant des SAV Payants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>