force-app/main/default/objects/AccountingEntry__c/fields/amountDifference__c.field-meta.xml
<CustomField>
    <fullName>amountDifference__c</fullName>
    <formula>IF(ISNULL(amount__c) || ISNULL(oldAmount__c), null, amount__c - oldAmount__c)</formula>
    <label>[#] Delta OLD versus NEW montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>