force-app/main/default/objects/AccountingEntry__c/fields/bypassValidation__c.field-meta.xml
<CustomField>
    <fullName>bypassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs technique pour ne pas exécuter les règles de validation avec un process</description>
    <label>[#] Bypass validation</label>
    <type>Checkbox</type>
</CustomField>