force-app/main/default/objects/AccountingEntry__c/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <label>Commentaires</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>