force-app/main/default/objects/AccountingEntry__c/fields/customerOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>customerOrderAmount__c</fullName>
    <description>Montants affectés à des contrats</description>
    <label>Montant des commandes client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>