force-app/main/default/objects/AccountingEntry__c/fields/entityBankAccount__c.field-meta.xml
<CustomField>
    <fullName>entityBankAccount__c</fullName>
    <label>Compte bancaire (Entité)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BankAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipName>AccountingEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>