force-app/main/default/objects/AccountingEntry__c/fields/entryDate__c.field-meta.xml
<CustomField>
    <fullName>entryDate__c</fullName>
    <label>Date d’écriture</label>
    <type>Date</type>
</CustomField>