force-app/main/default/objects/AccountingEntry__c/fields/isAccountingEntryLocked__c.field-meta.xml
<CustomField>
    <fullName>isAccountingEntryLocked__c</fullName>
    <description>Interdire toute suppression d&apos;écriture et ceci pendant une période de 4 ans (à partir de la date de création)</description>
    <formula>ADDMONTHS(DATEVALUE(CreatedDate), 48) &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Ecriture comptable vérrouillée</label>
    <type>Checkbox</type>
</CustomField>