force-app/main/default/objects/AccountingEntry__c/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <label>Libellé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>