force-app/main/default/objects/AccountingEntry__c/fields/legacyReference__c.field-meta.xml
<CustomField>
    <fullName>legacyReference__c</fullName>
    <externalId>true</externalId>
    <label>[#] Reprise d&apos;historique (Référence)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>