force-app/main/default/objects/AccountingEntry__c/fields/oldAmount__c.field-meta.xml
<CustomField>
    <fullName>oldAmount__c</fullName>
    <label>[#] Ancien montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>