force-app/main/default/objects/AccountingEntry__c/fields/paymentType__c.field-meta.xml
<CustomField>
    <fullName>paymentType__c</fullName>
    <label>Type de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>paymentType</valueSetName>
    </valueSet>
</CustomField>