force-app/main/default/objects/AccountingEntry__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
     &quot;BankRemittance&quot;,             &quot;1 - Client&quot;,
     &quot;OtherRevenue&quot;,               &quot;2 - Autre recette&quot;,
     &quot;Unpaid&quot;,                     &quot;3 - Impayé&quot;,
     &quot;BankFees&quot;,                   &quot;4 - Frais bancaire&quot;,
     &quot;CashWithdrawal&quot;,             &quot;5 - Retrait espèce&quot;,
     &quot;HeadOfficeTransfer&quot;,         &quot;6 - Virement siège&quot;,
     &quot;BankRemittanceCancellation&quot;, &quot;7 - Annulation remise&quot;,
     &quot;VATDifference&quot;,              &quot;8 - Ecart conversion&quot;,
     &quot;OtherExpence&quot;,               &quot;9 - Autre dépense&quot;,
     RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>