force-app/main/default/objects/AccountingEntry__c/recordTypes/BankFees.recordType-meta.xml
<RecordType>
    <fullName>BankFees</fullName>
    <active>true</active>
    <label>Frais bancaire</label>
</RecordType>