force-app/main/default/objects/AccountingEntry__c/recordTypes/BankRemittance.recordType-meta.xml
<RecordType>
    <fullName>BankRemittance</fullName>
    <active>true</active>
    <label>Remise en banque</label>
</RecordType>