force-app/main/default/objects/AccountingEntry__c/recordTypes/BankRemittanceCancellation.recordType-meta.xml
<RecordType>
    <fullName>BankRemittanceCancellation</fullName>
    <active>true</active>
    <label>Annulation remise</label>
</RecordType>