force-app/main/default/objects/AccountingEntry__c/recordTypes/CashWithdrawal.recordType-meta.xml
<RecordType>
    <fullName>CashWithdrawal</fullName>
    <active>true</active>
    <label>Retrait espèce</label>
</RecordType>