force-app/main/default/objects/AccountingEntry__c/recordTypes/HeadOfficeTransfer.recordType-meta.xml
<RecordType>
    <fullName>HeadOfficeTransfer</fullName>
    <active>true</active>
    <label>Virement siège</label>
</RecordType>