force-app/main/default/objects/AccountingEntry__c/recordTypes/OtherExpence.recordType-meta.xml
<RecordType>
    <fullName>OtherExpence</fullName>
    <active>true</active>
    <label>Autre dépense</label>
</RecordType>