force-app/main/default/objects/AccountingEntry__c/recordTypes/OtherRevenue.recordType-meta.xml
<RecordType>
    <fullName>OtherRevenue</fullName>
    <active>true</active>
    <label>Autre recette</label>
</RecordType>