force-app/main/default/objects/AccountingEntry__c/validationRules/VR_K3_AccountingEntry_BankAccountActive.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingEntry_BankAccountActive</fullName>
    <active>true</active>
    <description>En cas de saisie/modification du compte bancaire référencé, celui-ci est actif à la date de l&apos;écriture</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
(ISCHANGED(entityBankAccount__c) || ISNEW()) &amp;&amp;
(
				entryDate__c &lt; entityBankAccount__r.startDate__c ||
    entryDate__c &gt; entityBankAccount__r.endDate__c
)</errorConditionFormula>
    <errorDisplayField>entityBankAccount__c</errorDisplayField>
    <errorMessage>Le compte bancaire référencé n&apos;est pas actif!</errorMessage>
</ValidationRule>