force-app/main/default/objects/AccountingEntry__c/validationRules/VR_K3_AccountingEntry_CantUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingEntry_CantUpdate</fullName>
    <active>false</active>
    <description>Impossible de modifier les entrées sauf par processus de déversement par les pièces comptables</description>
    <errorConditionFormula>$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
NOT(ISNEW()) &amp;&amp;
bypassValidation__c == false &amp;&amp;
NOT(ISCHANGED(bypassValidation__c))</errorConditionFormula>
    <errorMessage>Impossible de modifier l&apos;enregistrement!</errorMessage>
</ValidationRule>