force-app/main/default/objects/AccountingEntry__c/validationRules/VR_K3_AccountingEntry_ChangeClosingDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingEntry_ChangeClosingDate</fullName>
    <active>true</active>
    <description>Impossible de changer la date de clôture si elle est déjà renseignée.</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
NOT(ISNULL(PRIORVALUE(closingDate__c))) &amp;&amp; ISCHANGED(closingDate__c)</errorConditionFormula>
    <errorMessage>Impossible de changer la date de clôture si elle est déjà renseignée.</errorMessage>
</ValidationRule>