force-app/main/default/objects/AccountingEntry__c/validationRules/VR_K3_AccountingEntry_EntityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingEntry_EntityRequired</fullName>
    <active>true</active>
    <description>Entité de saisie obligatoire si &quot;Remise en banque&quot; ou &quot;Annulation remise&quot; ou &quot;Impayé&quot;</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
ISBLANK(inputEntity__c)
/* FGO, le 08/11/2022
&amp;&amp; (
RecordType.DeveloperName = &apos;BankRemittance&apos; ||
RecordType.DeveloperName = &apos;BankRemittanceCancellation&apos; ||
RecordType.DeveloperName = &apos;Unpaid&apos;
)
*/</errorConditionFormula>
    <errorDisplayField>inputEntity__c</errorDisplayField>
    <errorMessage>Entité de saisie obligatoire!</errorMessage>
</ValidationRule>