force-app/main/default/objects/AccountingEntry__c/validationRules/VR_K3_AccountingEntry_LabelRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingEntry_LabelRequired</fullName>
    <active>true</active>
    <description>Libellé obligatoire</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
ISBLANK( label__c )</errorConditionFormula>
    <errorDisplayField>label__c</errorDisplayField>
    <errorMessage>Libellé obligatoire!</errorMessage>
</ValidationRule>