force-app/main/default/objects/AccountingEntry__c/validationRules/VR_K3_AccountingEntry_RefNotNecessary.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingEntry_RefNotNecessary</fullName>
    <active>true</active>
    <description>Impossible d&apos;alimenter le champ Reference pour les types &quot;Remise en banque&quot;, &quot;Annulation remise&quot; et &quot;Impayé&quot;</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLegacy__c == false &amp;&amp;
NOT(ISBLANK(KparKReference__c)) &amp;&amp;
(
				RecordType.DeveloperName == &apos;BankRemittance&apos; ||				
				RecordType.DeveloperName == &apos;BankRemittanceCancellation&apos; ||
				RecordType.DeveloperName == &apos;Unpaid&apos; 
)</errorConditionFormula>
    <errorDisplayField>KparKReference__c</errorDisplayField>
    <errorMessage>La référence ne doit pas être alimentée pour ces types d&apos;enregistrement!</errorMessage>
</ValidationRule>