force-app/main/default/objects/AccountingEntry__c/validationRules/VR_K3_AccountingEntry_Unmutable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_AccountingEntry_Unmutable</fullName>
    <active>true</active>
    <description>Ecriturecomptable non modifiable!
Remplace et annule la VR:VR_K3_AccountingEntry_CantUpdate</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;

/* Type d&apos;écriture */
OR(/* Ecriture comptable manuelle */
   RecordType.DeveloperName != &apos;BankRemittance&apos; &amp;&amp;
   RecordType.DeveloperName != &apos;BankRemittanceCancellation&apos; &amp;&amp;
   RecordType.DeveloperName != &apos;Unpaid&apos;,
   /* Ecriture comptable auto-alimentée */
   NOT(ISNEW()) &amp;&amp; bypassValidation__c == false &amp;&amp; NOT(ISCHANGED(bypassValidation__c))
) &amp;&amp;

/* Détection des valeurs modifiées */
OR(ISCHANGED(RecordTypeId),
   ISCHANGED(entityBankAccount__c),
   ISCHANGED(entryDate__c),
   ISCHANGED(inputEntity__c),
   ISCHANGED(label__c),  
   ISCHANGED(amount__c),
   ISCHANGED(customerOrderAmount__c),
   ISCHANGED(afterSalesServiceAmount__c),
   ISCHANGED(type__c),
   ISCHANGED(paymentType__c)
)</errorConditionFormula>
    <errorMessage>Ecriture comptable non modifiable!</errorMessage>
</ValidationRule>