force-app/main/default/objects/AccountingEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>label__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>KparKReference__c</columns>
    <columns>entryDate__c</columns>
    <columns>amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>